FIX: Improve spacing for colour picker, ensure input is always hidden [t14930]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10615 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1353,3 +1353,8 @@ a.Enabled, a:visited.Enabled {
 .BreadcrumbsBox > .SearchBreadcrumbs {
     margin: 0;
 }
+
+/* Colour picker */
+#tile_style_colour {
+    display: none;
+}
